kubernetes-manifests/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-manifests
  namespace: central-configuration
  labels:
    app: kubernetes-manifests
    component: central-config
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - kubernetes-manifests.central-config.exalt.com
    secretName: kubernetes-manifests-tls
  rules:
  - host: kubernetes-manifests.central-config.exalt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-manifests
            port:
              number: 8186
